demo1Service.yml

apiVersion: v1
kind: Service
metadata:
  labels:
    app: demo1
  name: demo1
  namespace: demo
spec:
  type: NodePort
  ports:
  - name: demo1
    port: 8080
    targetPort: 8081
    nodePort: 31001
  selector:
    app: demo1
